# routes/api.php
@@ -1,15 +1,21 @@
 <?php
-use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\studentController;
 use App\Http\Controllers\SchoolController;
 use App\Http\Controllers\TeacherController;
 use App\Http\Controllers\ClassroomController;
+use App\Http\Controllers\AuthController;
 use App\Http\Middleware\StudentMiddleware;
-use Illuminate\Routing\Router;
+
+// Auth
+Route::controller(AuthController::class)->group(function(){
+
+    Route::post('/auth/register','register');
+    Route::post('/auth/login','login');
+});
 
 // Estudiantes
-Route::controller(studentController::class)->middleware(StudentMiddleware::class)->group(function()
+Route::controller(studentController::class)->middleware(['auth:api',StudentMiddleware::class])->group(function()
 {
 
     Route::get('/students','getAll');
